<resources>
    <string name="app_name" translatable="false">SquadHub</string>
    <string name="login_btn" translatable="false">Login</string>
    <string name="register_btn">Don’t have an account?</string>
    <string name="txtUserType">User Type</string>

    <string name="admin_btn" translatable="false">Admin</string>
    <string name="coach_btn">Coach</string>
    <string name="player_btn">Player</string>
    <string name="staff_btn" translatable="false">Staff</string>

    <string name="username_input">Username</string>
    <string name="password_input" translatable="false">Password</string>
    <string name="repeatPassword_input">Repeat Password</string>
    <string name="name_input">Name</string>
    <string name="surname_input">Surname</string>
    <string name="birthday_input">Date of birth</string>
    <string name="email_input" translatable="false">Email</string>
    <string name="phone_input">Phone</string>
    <string name="submitregister_btn">Register</string>
    <string name="goToLogin_btn">Do you have an account?</string>
    <string name="saveLogin">Remember Me</string>

    <string name="squadBtn">Squad</string>
    <string name="gamesBtn">Games</string>
    <string name="trainingBtn">Training Sessions</string>
    <string name="staffBtn" translatable="false">Staff</string>
    <string name="coachBtn">Coach</string>

    <string name="noGamesTextView">No Games</string>
    <string name="noPlayerTextView">No Player</string>

    <string name="squadTitle">Squad</string>
    <string name="gamesTitle">Games</string>
    <string name="trainingTitle">Training Session</string>
    <string name="staffTitle" translatable="false">Staff</string>
    <string name="coachTitle">Coach</string>
    <string name="gamecallTitle">Game Call</string>
    <string name="gameStatisticsTitle">Statistics</string>
    <string name="addGameTitle">Add Game</string>
    <string name="addPlayerTitle">Add Player</string>

    <string name="playerPerfilTitle">Player Profile</string>
    <string name="injuriesTitle">Injuries</string>
    <string name="performanceTitle" translatable="false">Performance</string>
    <string name="trainingPerformanceTitle">Training Performance</string>
    <string name="addStaffTitle">Add Staff</string>

    <string name="addTrainingTitle">Add Training</string>

    <string name="updateBtn">Save</string>

    <string name="coach_name">Name</string>
    <string name="coach_email" translatable="false">Email</string>
    <string name="coach_phone">Phone</string>
    <string name="coach_birthdate">Birthdate</string>
    <string name="coach_careerStartDate">Career Start Date</string>

    <string name="gamecall_nogamecall">Game call not yet created</string>


    <string name="dialog_removeGameTitle">Are you sure you want to remove the game?</string>
    <string name="dialog_removeGameMessage">You cannot reverse this action!</string>
    <string name="dialog_removeGameCancel">Cancel</string>

    <string name="gameStatistics_nostatistics">No statistics yet</string>

    <string name="welcomeback">Welcome Back</string>
    <string name="nextGame">Next Game</string>
    <string name="statistics">Statistics</string>
    <string name="victory">Victory</string>
    <string name="draw">Draw</string>
    <string name="defeat">Defeat</string>
    <string name="bestPlayers">Best Players</string>
    <string name="scorer">Scorer</string>
    <string name="assister">Assister</string>
    <string name="joinClub">Join a Club</string>

    <string name="ball_possession">Ball Possession</string>
    <string name="goals_scored">Goals Scored</string>
    <string name="goals_conceded">Goals Conceded</string>
    <string name="shots">Shots</string>
    <string name="shots_goal">Shots on Goal</string>
    <string name="fouls">Fouls</string>
    <string name="passes">Passes</string>

    <string name="opponent">Opponent</string>
    <string name="competition">Competition</string>
    <string name="local">Local</string>
    <string name="date">Date</string>
    <string name="time">Hour</string>
    <string name="finish">Finish</string>

    <string name="playerInvite">*A club membership application will be sent to the player.</string>
    <string name="staffInvite">*A club membership application will be sent to the staff.</string>

    <string name="add">Add</string>

    <string name="dialog_removeNotificationTitle">Are you sure you want to remove the notification?</string>
    <string name="dialog_removeNotificationMessage">You cannot reverse this action!</string>

    <string name="only_web_application">You can only accept the invitation in the web application.</string>

    <string name="goals">Goals</string>
    <string name="assists">Assists</string>

    <string name="no_endDate">No known end date</string>

    <string name="no_injury">No injuries</string>
    <string name="no_performance">No performances</string>

    <string name="no_notification">No notifications</string>

    <string name="dialog_removeTrainingTitle">Are you sure you want to remove the training session?</string>
    <string name="dialog_removeTrainingMessage">You cannot reverse this action!</string>

    <string name="no_data">No data</string>

    <string-array name="training_types">
        <item>Technical Training</item>
        <item>Tactical Training</item>
        <item>Physical Training</item>
        <item>Recovery Training</item>
        <item>Collective Training</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>